# pdf_ingest

./: .env-gdc  .gitattributes  .gitignore  .gitmodules  .pylintrc  Makefile  README.md  arch-diagram.puml  envs.app.makefile  envs.azure.makefile  envs.local.makefile  envs.par-dev.makefile  process-flow.md  pyproject.toml  pyrightconfig.json  readme-iac.md
iac/: blob.tf  functions.tf  lambda_custom_layer.tf  lambda_inbox_container.tf  lambda_outbox.tf  monitoring.tf  outputs.tf  provider.tf  s3.tf  sqs.tf  variables.tf
src/common_layer/: makefile
src/common_layer/src/: requirements.txt
src/docker/: Dockerfile.lambda  Dockerfile.layer  makefile.ecr  makefile.lambda  makefile.layer
src/inbox_container/: Dockerfile  README.md  makefile  requirements.txt
src/inbox_container/src/: function.json  handler.py  health.py  health_function.json
src/inbox_container/src/ai_ocr/: __init__.py  __main__.py  llm_config.py  llm_image_utils.py  llm_providers.py
src/lambda_outbox/: makefile  requirements.txt
src/lambda_outbox/src/: function.json  handler.py  health.py
src/lib/: __init__.py  debug.py  get_client.py  pricing_lookup.py  provider_cb_info.py
src/lib/par_ai_core/: __main__.py  llm_config.py  llm_providers.py  output_utils.py  pricing_lookup.py  provider_cb_info.py  utils.py
src/lib/utils/: __init__.py  azure_storage_utils.py  ddb_utils.py  generic_utils.py  headers_util.py  ssm_utils.py
