[project]
name = "pdf_ingest"
version = "0.1.0"
description = "Ingest and OCR pdfs from s3"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aws-lambda-powertools[all]>=3.0.0",
    "boto3>=1.35.29",
    "certifi>=2024.8.30",
    "isodate>=0.6.1",
    "orjson>=3.10.7",
    "pytz>=2024.2",
    "requests>=2.32.3",
    "urllib3>=2.2.3",
    "rich>=13.9.1",
    "pdf2image>=1.17.0",
    "langchain>=0.3.1",
    "langchain-core>=0.3.8",
    "typer>=0.12.5",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.1",
    "botocore>=1.35.42",
    "psycopg[binary]>=3.2.3",
    "par-ai-core>=0.1.8",
]

[dependency-groups]
dev = [
    "pre-commit>=3.8.0",
    "pyright>=1.1.382.post1",
    "ruff>=0.7.2",
    "types-orjson>=3.6.2",
    "types-pytz>=2024.2.0.20240913",
    "types-requests>=2.32.0.20240914",
]
