[project]
name = "pdf_ingest"
version = "0.1.0"
description = "Ingest and OCR pdfs from s3"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pdf2image>=1.17.0",
    "python-dotenv>=1.1.0",
    "psycopg[binary]>=3.2.6",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "langchain>=0.3.23",
    "pydantic-core>=2.33.1",
    "pydantic>=2.11.2",
    "par-ai-core>=0.1.24",
    "azure-storage-blob>=12.25.1",
    "azure-storage-queue>=12.12.0",
    "azure-functions>=1.22.1",
    "azure-identity>=1.21.0",
    "azure-servicebus>=7.14.1",
    "azure-monitor-opentelemetry>=1.6.6",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pyright>=1.1.398",
    "ruff>=0.11.4",
]
