[project]
name = "pdf_ingest"
version = "0.1.0"
description = "Ingest and OCR pdfs from s3"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aws-lambda-powertools[all]>=3.4.0",
    "pdf2image>=1.17.0",
    "python-dotenv>=1.0.1",
    "psycopg[binary]>=3.2.3",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "orjson>=3.10.13",
    "strenum>=0.4.15",
    "boto3>=1.35.93",
    "botocore>=1.35.93",
    "langchain-anthropic>=0.3.1",
    "langchain-aws>=0.2.10",
    "langchain-core>=0.3.29",
    "langchain-openai>=0.2.14",
    "langchain-text-splitters>=0.3.4",
    "langchain>=0.3.14",
    "pydantic-core>=2.27.2",
    "pydantic>=2.10.4",
]

[project.license]
file = "LICENSE"

[dependency-groups]
dev = [
    "pre-commit>=3.8.0",
    "pyright>=1.1.382.post1",
    "ruff>=0.7.2",
    "types-orjson>=3.6.2",
    "types-pytz>=2024.2.0.20240913",
    "types-requests>=2.32.0.20240914",
]
